ms_log_management/deployment/infrastructure/eks/manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: #{name}#
  namespace: #{namespace}#
  labels:
    app.bancolombia.com.co/env: #{env}#
    app.bancolombia.com.co/cost-center: #{cost-center}#
    app.bancolombia.com.co/application-code: #{application-code}#
    app.bancolombia.com.co/project: #{project-name}#
    app.bancolombia.com.co/pmo: #{pmo}#
spec:
  selector:
    app: #{project-name}#
    pod: #{name}#-pod
  ports:
    - name: #{config-protocol-name}#
      targetPort: #{container-port}#
      port:  #{config-port}#
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #{name}#-deployment
  namespace: #{namespace}#
  labels:
    app.bancolombia.com.co/env: #{env}#
    app.bancolombia.com.co/cost-center: #{cost-center}#
    app.bancolombia.com.co/application-code: #{application-code}#
    app.bancolombia.com.co/project: #{project-name}#
    app.bancolombia.com.co/pmo: #{pmo}#
spec:
  replicas: #{replicas}#
  selector:
    matchLabels:
      pod: #{name}#-pod
  template:
    metadata:
      labels:
        app: #{project-name}#
        pod: #{name}#-pod
        app.bancolombia.com.co/project: #{project-name}#
        version: #{version}#
    spec:
      serviceAccountName: #{service-account-name}#
      containers:
        - name: #{name}#-container
          image: #{image}#
          resources:
            requests:
              memory: "#{memory-request}#Mi"
              cpu: "#{cpu-request}#m"
            limits:
              memory: "#{memory-limits}#Mi"
              cpu: "#{cpu-limits}#m"
          ports:
            - containerPort: #{container-port}#
      securityContext:
        fsGroup: 65534
